fix: theme transition error on ios

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,9 +5,7 @@
 }
 
 html {
-  --at-apply: 'bg-background c-secondary text-62.5% antialiased scroll-smooth';
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+  --at-apply: 'bg-background c-secondary text-62.5% antialiased scroll-smooth scrollbar-hidden';
 }
 
 html::-webkit-scrollbar {
@@ -15,10 +13,7 @@ html::-webkit-scrollbar {
 }
 
 body {
-  --at-apply: 'text-1.6rem';
-  /* Fix for iOS browser flash issue */
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
+  --at-apply: 'text-1.6rem ios-flash-fix';
 }
 
 h1 {
@@ -46,10 +41,8 @@ h6 {
 }
 
 article img {
-  --at-apply: 'cursor-zoom-in';
   /* Optimize animation performance of Scrollbar */
-  transform: translateZ(0);
-  -webkit-transform: translateZ(0);
+  --at-apply: 'cursor-zoom-in ios-flash-fix';
 }
 
 /* Horizontal reveal animation on theme toggle */
@@ -84,7 +77,7 @@ html[data-theme-transition] [data-disable-transition-on-theme] {
 
 @supports not (view-transition-name: none) {
   html:not([data-restore-theme]) {
-    --at-apply: 'transition-colors duration-500 ease-in-out';
+    --at-apply: 'transition-colors duration-300 ease-in-out';
   }
 
   html:not([data-restore-theme]) [data-disable-transition-on-theme] {
